--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
 
     <script type="module" src="./src/JS/init.js"></script>
+    <script src="./src/JS/scroll.js"></script>
 </body>
 
 </html>
