--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="carrinho-total">
             Total: <span id="carrinho-total">R$ 0,00</span>
         </div>
-        <button class="btn-pedido" onclick="finalizarPedido()">Fazer Pedido</button>
+        <button class="btn-pedido" onclick="fazerPedido()">Fazer Pedido</button>
     </div>
 
     <footer class="footer">
