--- a/index.html
+++ b/index.html
@@ -89,6 +89,36 @@
         <button class="btn-pedido" onclick="fazerPedido()">Fazer Pedido</button>
     </div>
 
+    <!-- HTML -->
+    <section class="localizacao">
+        <div class="localizacao-container">
+            <!-- Texto -->
+            <div class="localizacao-info">
+                <h2 class="title-primary">Venha nos visitar</h2>
+                <address>
+                    <p>🗺️ Rua da Tecnologia, 123</p>
+                    <p>📌 Centro - Curitiba/PR</p>
+                    <p>📞 (43) 99614-5479</p>
+                    <p>⏰ Funcionamento: Ter-Dom, 11h às 23h</p>
+                </address>
+                <div class="destaques">
+                    <p>🌟 Ambiente climatizado</p>
+                    <p>🅿️ Estacionamento próprio</p>
+                    <p>📶 Wi-Fi grátis</p>
+                </div>
+            </div>
+
+            <!-- Mapa -->
+            <div class="localizacao-mapa">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.238635888807!2d-49.29182668501108!3d-25.4566547837756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDI3JzIzLjkiUyA0OcKwMTcnMjkuNiJX!5e0!3m2!1spt-BR!2sbr!4v1622581876455!5m2!1spt-BR!2sbr"
+                    style="border:0;" allowfullscreen="" loading="lazy" title="Mapa da localização do estabelecimento">
+                </iframe>
+            </div>
+        </div>
+    </section>
+
+
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
